# chirrup

./: .gitignore  .gitmodules  .python-version  README.md  pyproject.toml  worker_0_bsz_80.html
Albatross/: rwkv7.py
Docs/: API.md
chirrup/: core_structure.py  engine_core copy.py  engine_core.py  interface.py  worker copy.py  worker.py
chirrup/utils/: rapid_sampling_wrapper.py  samplers.py
chirrup/web_service/: app.py
scripts/: albatross_benchmark_threading.py  benchmark_albatross.py  benchmark_nvlink_bandwidth.py  demo_api_non_streaming_concurrent.py  demo_api_streaming_interact.py  demo_batch_output.py  demo_stream_output.py  test_engine_core.py  test_engine_core_concurrent.py  test_nvlink_parallel_transfer.py
scripts/test_mm8/: benchmark.py  benchmark_pure_pytorch.py  gemm_fp16_cublas.cpp  rwkv_pip_operators.cu  rwkv_pip_wrapper.cpp
scripts/test_mmlu/: test_mmlu.py
test/: albatross_benchmark_threading.py  benchmark_albatross.py  test_api_streaming_concurrent.py  test_engine_core.py  test_engine_core_concurrent.py
tests/: test_sampler_equivalence.py  test_sampler_vs_rwkv_pip.py  test_worker_state_category.py
