[project]
name = "chirrup"
version = "0.1.0"
description = "RWKV Inference Server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.0",
    "loguru>=0.7.3",
    "ninja>=1.13.0",
    "numpy>=2.3.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
    "snowflake-id>=1.0.2",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chirrup"]

[project.optional-dependencies]
torch-cpu = ["torch>=2.8.0"]
torch-cu129 = ["torch>=2.8.0"]
torch-cu126 = ["torch>=2.8.0"]
torch-rocm = ["torch==2.9.1+rocm6.4", "pytorch-triton-rocm"]

[tool.uv]
conflicts = [
    [
        { extra = "torch-cpu" },
        { extra = "torch-cu129" },
        { extra = "torch-cu126" },
        { extra = "torch-rocm" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu129", extra = "torch-cu129" },
    { index = "pytorch-cu126", extra = "torch-cu126" },
    { index = "pytorch-rocm", extra = "torch-rocm" },
]
pytorch-triton-rocm = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.black]
line-length = 120

[dependency-groups]
dev = [
    "aiohttp>=3.13.2",
    "openai>=1.0.0",
    "pytest>=8.0.0",
    "requests>=2.32.5",
    "rwkv>=0.8.0",
    "tqdm>=4.67.1",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "pyinstrument>=5.1.1",
]
